--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
       <!--  section two feature -->
       <section class="feature">
         <div class="container feature-container">
-          <h2 class="feature-title-hero">priorities</h2>
+          <h2 class="visually-hidden">priorities</h2>
           <ul class="list-feature-container">
             <li class="list-item">
               <div class="feature-icon-box">
@@ -446,7 +446,7 @@
             digital marketing & growth solutions.
           </p>
         </div>
-        <!-- social -->
+        <!-- social -2-->
         <div class="container-foot-social">
           <p class="footer-text-soc">Social media</p>
           <ul class="foot-social-list">
@@ -480,10 +480,11 @@
             </li>
           </ul>
         </div>
-        <!-- subsc 5 -- -->
+        <!-- subsc 3 -- -->
         <div class="subs-form-wrap">
           <p class="subsc-text">Subscribe</p>
           <form class="subsc-form">
+            <label for="" class="subst-lab"> </label>
             <input
               class="subst-input"
               type="email"
@@ -492,7 +493,7 @@
             />
             <button class="subsc-btn" type="submit">
               Subscribe
-              <svg class="icon-send-footer" wight="24" height="24">
+              <svg class="icon-send-footer" width="24" height="24">
                 <use href="./images/icons.svg#icon-send-footer"></use>
               </svg>
             </button>
@@ -521,7 +522,7 @@
                 id="user-name"
                 required
               />
-              <svg class="form-icon" wight="18" height="18">
+              <svg class="form-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-name"></use>
               </svg>
             </div>
@@ -536,7 +537,7 @@
                 id="user-tel"
                 required
               />
-              <svg class="form-icon" wight="18" height="24">
+              <svg class="form-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-phone"></use>
               </svg>
             </div>
@@ -552,41 +553,41 @@
                 id="user-email"
                 required
               />
-              <svg class="form-icon" weight="18" height="24">
+              <svg class="form-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-em"></use>
               </svg>
             </div>
           </div>
-          <div class="modal-field">
-            <label class="modal-lable" for="coment-text">Comment</label>
+          <div class="modal-field-text">
+            <label class="modal-lable" for="user-comment">Comment</label>
             <textarea
               class="model-coment-text"
-              name="coment-text"
-              id="coment-text"
+              name="user-comment"
+              id="user-comment"
               placeholder="Text input"
             ></textarea>
-            <div class="modal-field">
-              <input
-                type="checkbox"
-                name="policy"
-                id="policy"
-                class="check-input feature-title-hero"
-                value="true"
-                required
-              />
-              <label for="policy" class="check-text"
-                ><span>
-                  <svg class="check-icon" wight="10" height="8">
-                    <use href="./images/icons.svg#icon-check"></use>
-                  </svg> </span
-                >I accept the terms and conditions of the<a class="" href=""
-                  >Privacy Policy</a
-                ></label
-              >
-            </div>
-
-            <button class="model-send-btn" type="submit">Send</button>
           </div>
+          <div class="modal-field-chec">
+            <input
+              type="checkbox"
+              name="user-privacy"
+              id="user-privacy"
+              class="check-input visually-hidden"
+              value="true"
+              required
+            />
+            <label for="user-privacy" class="check-text">
+              <span class="check-text-span">
+                <svg class="check-icon" width="10" height="8">
+                  <use href="./images/icons.svg#icon-check"></use>
+                </svg>
+              </span>
+              I accept the terms and conditions of the
+              <a class="link-privacy" href="">Privacy Policy</a>
+            </label>
+          </div>
+
+          <button class="model-send-btn" type="submit">Send</button>
         </form>
       </div>
     </div>
