--- a/index.html
+++ b/index.html
@@ -484,13 +484,14 @@
         <div class="subs-form-wrap">
           <p class="subsc-text">Subscribe</p>
           <form class="subsc-form">
-            <label for="" class="subst-lab"> </label>
-            <input
-              class="subst-input"
-              type="email"
-              name="email-footer"
-              placeholder="E-mail"
-            />
+            <label class="subst-lab">
+              <input
+                class="subst-input"
+                type="email"
+                name="email-footer"
+                placeholder="E-mail"
+              />
+            </label>
             <button class="subsc-btn" type="submit">
               Subscribe
               <svg class="icon-send-footer" width="24" height="24">
